--- a/style.css
+++ b/style.css
@@ -6,25 +6,27 @@ background-position:center;
 }
 #mainborder{
 	position : absolute;
-	margin-right: 200px
-	border-spacing: 1000px 1500px; 
+	border-spacing: 100px 500px; 
 	border-radius: 50px 20px;
 	background-color: rgb(196,196,196,0.6) ;
-	margin-left:  300px;
-	margin-right: 200px;
-	margin-top:65px;
+	margin-left: 400px;
+	margin-top:-80px 
+
 }
 #header1{
-	margin-left:55px;
-	margin-right:950px 
+	border-position : absolute;
+	border-spacing: 150px 140px;
+	background-color: rgb(196,196,196,0.6) ;
+	margin-left:50px;
+	margin-right:1000px 
 }
 
 #footer1{
 	border-position : absolute;
-	border-spacing: 130px 140px;
-	background-color: rgb(196,196,196,0.6) ; 
-	border-radius: 50px 20px;
+	border-spacing: 150px 140px;
+	background-color: rgb(196,196,196,0.6) ;
 	font-size: 12px;
+	border-radius: 0px 20px;
 	margin-left: 1100px;
 	margin-top: 250px;
 }
@@ -61,7 +63,7 @@ body{
 
 }
 #search{
-
+    margin-top:-20px; 
 	margin-left: 1050px;
 }
 #searchButton{
@@ -106,7 +108,34 @@ body{
 }*/
 
 /*flower page */
-#FlowerSelect{
+/*#FlowerSelect{
+	margin-top: 60px;
+	margin-left: 500px;
+}*/
+#laaast{
+	font-weight: bold;
+	font-size: 40px;
 	margin-top: 60px;
 	margin-left: 500px;
 }
+#redimage{
+	width: 400px;
+	height: 220px
+}
+#imgred{
+	margin-right: 150px;
+    margin-left: 400px;
+}
+#ourCommunity{
+	margin-left: 470px;
+	margin-top: 50px 
+}
+#feedback{
+	margin-left: 50px
+}
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
