--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@ background-position:center;
 }
 #header1{
 	border-position : absolute;
+	border-radius: 0px 20px;
 	border-spacing: 150px 140px;
 	background-color: rgb(196,196,196,0.6) ;
-	margin-left:50px;
-	margin-right:1000px 
+	margin-left:450px;
+	margin-right:450px ;
+	margin-top: 200px
 }
 
 #footer1{
